--- a/templates/sequences/sequences.html
+++ b/templates/sequences/sequences.html
@@ -3,34 +3,34 @@
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <link href="/static/css/main.css" rel="stylesheet">
-        <title>Firework Launcher - Patterns</title>
+        <title>Firework Launcher - Sequences</title>
     </head>
     <body>
         <ul class="navbar">
             <li class="navbar-item-li"><a class="navtitle" href="/">Firework Launcher</a></li>
             <li class="navbar-item-li"><a class="navbar-item" href="/add_launcher">Add launcher</a></li>
-            <li class="navbar-item-li"><a class="navbar-item" href="/patterns">Patterns</a></li>
+            <li class="navbar-item-li"><a class="navbar-item" href="/sequences">Sequences</a></li>
             <li class="navbar-item-hamburger"><a class="hamburger-menu" onclick="expand_hamburger()"><img src="/static/svgs/bars.svg" width="20" class="hamburger-menu-svg" alt="Hamburger Menu"/></a></li>
         </ul>
         <div id="hamburgerExpandMenu">
             <a class="navbar-item-expanded" href="/add_launcher">Add launcher</a>
-            <a class="navbar-item-expanded" href="/patterns">Patterns</a>
+            <a class="navbar-item-expanded" href="/sequences">Sequences</a>
         </div>
         <div id="error" class="error_msg">
             <p id="error_text"></p>
         </div>
-        <div class="patternlist">
-            {% for pattern in patterns %}
-                <div id="pattern_{{ pattern }}">
-                    <h1 id="h1pattern_{{ pattern }}">{{ pattern }} 
-                        <button class="firework_button" id="run_{{ pattern }}" onclick="run_pattern('{{ pattern }}')">Run</button>
-                        <button class="firework_button" id="delete_{{ pattern }}" onclick="delete_pattern('{{ pattern }}')">Delete</button>
+        <div class="sequencelist">
+            {% for sequence in sequences %}
+                <div id="sequence_{{ sequence }}">
+                    <h1 id="h1sequence_{{ sequence }}">{{ sequence }} 
+                        <button class="firework_button" id="run_{{ sequence }}" onclick="run_sequence('{{ sequence }}')">Run</button>
+                        <button class="firework_button" id="delete_{{ sequence }}" onclick="delete_sequence('{{ sequence }}')">Delete</button>
                     </h1><br/>
                 </div>
             {% endfor %}
-            <a class="firework_button" href="/patterns/add">Add Pattern</a>
+            <a class="firework_button" href="/sequences/add">Add Sequence</a>
         </div>
         <script src="/static/js/socketio.js"></script>
-        <script src="/static/js/patterns.js"></script>
+        <script src="/static/js/sequences.js"></script>
     </body>
 </html>
