--- a/templates/sequences/add.html
+++ b/templates/sequences/add.html
@@ -8,12 +8,12 @@
     <body>
         <ul class="navbar">
             <li class="navbar-item-li"><a class="navtitle" href="/">Firework Launcher</a></li>
-            <li class="navbar-item-li"><a class="navbar-item" href="/add_launcher">Add launcher</a></li>
+            <li class="navbar-item-li"><a class="navbar-item" href="/settings">Settings</a></li>
             <li class="navbar-item-li"><a class="navbar-item" href="/sequences">Sequences</a></li>
             <li class="navbar-item-hamburger"><a class="hamburger-menu" onclick="expand_hamburger()"><img src="/static/svgs/bars.svg" width="20" class="hamburger-menu-svg" alt="Hamburger Menu"/></a></li>
         </ul>
         <div id="hamburgerExpandMenu">
-            <a class="navbar-item-expanded" href="/add_launcher">Add launcher</a>
+            <a class="navbar-item-expanded" href="/settings">Settings</a>
             <a class="navbar-item-expanded" href="/sequences">Sequences</a>
         </div>
         <div class="sequencelist" id="form">
