--- a/templates/sequences/add.html
+++ b/templates/sequences/add.html
@@ -1,47 +1,30 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, user-scalable=no">
-        <link href="/static/css/main.css" rel="stylesheet">
-        <title>{{ name }} - Add Sequence</title>
-    </head>
-    <body>
-        <ul class="navbar">
-            <li class="navbar-item-li"><a class="navtitle" href="/">{{ name }}</a></li>
-            <li class="navbar-item-li"><a class="navbar-item" href="/settings">Settings</a></li>
-            <li class="navbar-item-li"><a class="navbar-item" href="/sequences">Sequences</a></li>
-            <li class="navbar-item-hamburger"><a class="hamburger-menu" onclick="expand_hamburger()"><img src="/static/svgs/bars.svg" width="20" class="hamburger-menu-svg" alt="Hamburger Menu"/></a></li>
-        </ul>
-        <div id="hamburgerExpandMenu">
-            <a class="navbar-item-expanded" href="/settings">Settings</a>
-            <a class="navbar-item-expanded" href="/sequences">Sequences</a>
+{% extends 'base.html' %}
+{% block content %}
+<div class="sequencelist" id="form">
+    <h3>Launcher: <select id="launcher_select">
+        {% for launcher in launchers %}
+        <option value="{{ launcher }}">{{ launchers[launcher] }} ({{ launcher }})</option>
+        {% endfor %}
+    </select></h3>
+    <h3>Name: <input type="text" id="sequencename"></h3>
+    <p id="special_characters" style="display: none">Please only use letters and numbers</p>
+    <h1 id="step">Step 1</h1>
+    <input type="text" style="display: none;" name="pins" id="pins">
+    <div id="btns"></div><br/>
+    <div class="legend" id="legend">
+        <h2>Legend</h2>
         </div>
-        <div class="sequencelist" id="form">
-            <h3>Launcher: <select id="launcher_select">
-                {% for launcher in launchers %}
-                <option value="{{ launcher }}">{{ launchers[launcher] }} ({{ launcher }})</option>
-                {% endfor %}
-            </select></h3>
-            <h3>Name: <input type="text" id="sequencename"></h3>
-            <p id="special_characters" style="display: none">Please only use letters and numbers</p>
-            <h1 id="step">Step 1</h1>
-            <input type="text" style="display: none;" name="pins" id="pins">
-            <div id="btns"></div><br/>
-            <div class="legend" id="legend">
-                <h2>Legend</h2>
-              </div>
-            <br/><br/>
+    <br/><br/>
 
-            <h3>Delay: <input id="delay" value="0" type="number"></h3>
-            <p id="delay_whole_number" style="display: none">Please do not use decimals or negative numbers</p>
-            <button class="firework_button" onclick="addStep();">Next Step</button><br/>
-            <button class="firework_button" onclick="submitSequence();">Done</button>
-        </div>
-        <form style="display: none" id="sequence_form" method="POST">
-            <input type="text" name="sequence_data" id="sequence_data">
-            <input type="text" name="sequence_name" id="sequence_name">
-        </form>
-        <script src="/static/js/fetchvars.js"></script>
-        <script>fetch_variables("/static/js/sequence_builder.js")</script>
-    </body>
-</html>
+    <h3>Delay: <input id="delay" value="0" type="number"></h3>
+    <p id="delay_whole_number" style="display: none">Please do not use decimals or negative numbers</p>
+    <button class="firework_button" onclick="addStep();">Next Step</button><br/>
+    <button class="firework_button" onclick="submitSequence();">Done</button>
+</div>
+<form style="display: none" id="sequence_form" method="POST">
+    <input type="text" name="sequence_data" id="sequence_data">
+    <input type="text" name="sequence_name" id="sequence_name">
+</form>
+<script src="/static/js/fetchvars.js"></script>
+<script>fetch_variables("/static/js/sequence_builder.js")</script>
+{% endblock %}
