Remove old sequence builder

--- a/templates/sequences/sequences.html
+++ b/templates/sequences/sequences.html
@@ -12,7 +12,7 @@
             </h1><br/>
         </div>
     {% endfor %}
-    <a class="firework_button" href="/sequences/add">Add Sequence</a>
+    <a class="firework_button" href="/sequences/builder">Add Sequence</a>
 </div>
 <script src="/static/js/socketio.js"></script>
 <script src="/static/js/sequences.js"></script>
