--- a/templates/sequences/builder.html
+++ b/templates/sequences/builder.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
-{% block content %}
+{% block css %}
 <link rel="stylesheet" href="/static/css/drawflow.css">
 <link rel="stylesheet" href="/static/css/drawflow2.css">
 <link rel="stylesheet" href="/static/css/drawflow_theme.css">
+{% endblock %}
+{% block content %}
 <p class="drawflow_error" id="error" style="display: none"></p>
 <div class="content" id="content">
     <div class="drawflow_buttons">
