Add title on select firework page

--- a/templates/sequences/builder.html
+++ b/templates/sequences/builder.html
@@ -56,7 +56,9 @@
     </div>
     <div class="wrapper" style="border: 2px #202020 solid;"><div id="drawflow"></div></div>
 </div>
-<div class="firework_select" id="firework_select"></div>
+<div class="firework_select" id="firework_select">
+    <h1>Select a Firework</h1>
+</div>
 <script src="/static/js/fetchvars.js"></script>
 <script src="/static/js/drawflow.js"></script>
 <script>fetch_variables("/static/js/sequence_builder.js")</script>
