--- a/templates/sequences/builder.html
+++ b/templates/sequences/builder.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="/static/css/drawflow_theme.css">
 {% endblock %}
 {% block content %}
+<p id="saveText" class="save_text">Saved</p>
 <p class="drawflow_error" id="error" style="display: none"></p>
 <div class="content" id="content">
     <div class="drawflow_buttons">
