Add close button to firework select

--- a/templates/sequences/builder.html
+++ b/templates/sequences/builder.html
@@ -58,7 +58,7 @@
     <div class="wrapper" style="border: 2px #202020 solid;"><div id="drawflow"></div></div>
 </div>
 <div class="firework_select" id="firework_select">
-    <h1>Select a Firework</h1>
+    <h1>Select a Firework <button class="firework_button" onclick="closeFireworkSelect()">Close</button></h1>
 </div>
 <script src="/static/js/fetchvars.js"></script>
 <script src="/static/js/drawflow.js"></script>
