--- a/templates/sequences/sequences.html
+++ b/templates/sequences/sequences.html
@@ -9,6 +9,7 @@
             <h1 id="h1sequence_{{ sequence }}">{{ sequence }} 
                 <button class="firework_button" id="run_{{ sequence }}" onclick="run_sequence('{{ sequence }}')">Run</button>
                 <button class="firework_button" id="delete_{{ sequence }}" onclick="delete_sequence('{{ sequence }}')">Delete</button>
+                <button class="firework_button" id="edit_{{ sequence }}" onclick="edit_sequence('{{ sequence }}')">Edit</button>
             </h1><br/>
         </div>
     {% endfor %}
