Show profiles on sequence builder

--- a/templates/sequences/builder.html
+++ b/templates/sequences/builder.html
@@ -58,6 +58,7 @@
 </div>
 <div class="firework_select" id="firework_select">
     <h1>Select a Firework <button class="firework_button" onclick="closeFireworkSelect()">Close</button></h1>
+    <div class="legend" id="legend"><h2>Legend</h2></div>
 </div>
 
 {% if edit %}
