Add button for skipping delays (update needed on launcher types)

--- a/templates/sequences/visualize.html
+++ b/templates/sequences/visualize.html
@@ -12,6 +12,7 @@
     <div class="drawflow_buttons">
         <div class="centered_drawflow">
             <button class="firework_button" id="run_button" onclick="run_sequence()">Run</button>
+            <button class="firework_button" id="firenow" onclick="firenow()" style="display: none">Skip Delay</button>
             <button class="firework_button sequence_delete_confirm" id="stop_button" onclick="stop_sequence()" style="display: none">Stop</button>
         </div>
     </div>
