Add indicator for what sequence is being visualized

--- a/templates/sequences/visualize.html
+++ b/templates/sequences/visualize.html
@@ -9,6 +9,9 @@
     <p id="error_text"></p>
 </div>
 <div class="content" id="content">
+    <div class="settings_content">
+        <h2 style="margin: 0; margin-bottom: 3px">Visualizing {{ sequence_name }}</h2>
+    </div>
     <div class="drawflow_buttons">
         <div class="centered_drawflow">
             <button class="firework_button" id="run_button" onclick="run_sequence()">Run</button>
