Add delete  button in sequence builder

--- a/templates/sequences/builder.html
+++ b/templates/sequences/builder.html
@@ -15,6 +15,7 @@
             <button class="firework_button" onclick="save_button()">Save</button>
         </div>
         <div class="right_drawflow">
+            <button class="firework_button sequence_delete_confirm" onclick="deleteNode()">Delete</button>
             <button class="firework_button" onclick="editSelectedNode()">Edit</button>
         </div>
     </div>
